# django-softdelete-mixin

./: README.md  setup.cfg
django_softdelete_mixin/: __init__.py  constant.py  deletion.py  manger.py  mixins.py  models.py  query.py  utils.py
