[metadata]
name = django-softdelete-mixin
version = 0.1.0
url = https://github.com/ZhaoQi99/django-softdelete-mixin
project_urls = 
    Homepage = https://github.com/ZhaoQi99/django-softdelete-mixin
    Changelog = https://github.com/ZhaoQi99/django-softdelete-mixin/releases
    Source = https://github.com/ZhaoQi99/django-softdelete-mixin
    Issue Tracker = https://github.com/ZhaoQi99/django-softdelete-mixin/issues
    # Documentation = https://github.com/ZhaoQi99/django-softdelete-mixin
author = Qi Zhao
author_email = zhaoqi99@outlook.com
# "Trove classifiers" for PyPI (https://pypi.org/classifiers/).
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Environment :: Console
license_files = LICENSE
description = Mixin which implement soft delete for Django ORM.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django, soft-delete, mixin, ORM, model, manager

[options]
install_requires = 
    django
python_requires = >=3.6
packages = find:
# package_dir =
#     = src

[options.packages.find]
# where = src
exclude =
    tests
    *.tests.*

[yapf]
based_on_style = pep8
COLUMN_LIMIT = 119
indent_width =  4
coalesce_brackets = True
dedent_closing_brackets = True